dealer manual updates - after abx-3l, just before whr switcher

--- a/index.html
+++ b/index.html
@@ -186,6 +186,11 @@ permalink: /
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://news.stoneagetools.com/abx-3l-available" target="_blank">Announcing AutoBox ABX-3L</a></h4>
+        <p>StoneAge is excited to announce the release of the AutoBox ABX-3L automated lancing system for your toughest exchanger cleaning jobs.<br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, February 2017</small></p>
+      </li>
+      <li>
         <h4><a href="http://news.stoneagetools.com/rotary-hydro-x-available">Rotary Hydro-X Available</a></h4>
         <p>The new HXR-300 Rotary Hydro-X tool has an angled rotating jet pattern for effective digging and working around utilities.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, February 2017</small></p>
@@ -204,11 +209,6 @@ permalink: /
         <h4><a href="http://news.stoneagetools.com/europe-2017">StoneAge Announces Direct Sales and New Distribution Territories in Europe</a></h4>
         <p>StoneAge will directly support industrial cleaning contractor needs in Western Europe by adding sales staff throughout the U.K., Netherlands and France as well as opening its European headquarters in the United Kingdom. Non-Western EEA markets will continue to be served by its realigned and exclusive distribution network.<br>
         <small><i class="fa fa-newspaper-o"></i> PRWeb, January 2017</small></p>
-      </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/new-regional-sales-managers" target="_blank">Meet Our Newest Regional Sales Managers</a></h4>
-        <p>StoneAge is pleased to welcome two new Regional Sales Managers to our outside sales team: Sean Baker and John Graham.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, December 2016</small></p>
       </li>
       <li><a href="/news">More news here</a></li>
     </ul>
