--- a/news.html
+++ b/news.html
@@ -17,6 +17,14 @@ permalink: /news
       
       <div class="media">          
         <div class="media-body">
+          <a href="http://news.stoneagetools.com/abx-3l-available"><h4 class="media-heading"><i class="fa fa-paper-plane-o"></i> Announcing AutoBox ABX-3L</h4></a>
+          StoneAge is excited to announce the release of the AutoBox ABX-3L automated lancing system for your toughest exchanger cleaning jobs.
+          <p class="grey"><small>E-blast &ndash; February 16, 2017</small></p>
+        </div>
+      </div>
+      
+      <div class="media">          
+        <div class="media-body">
           <a href="http://news.stoneagetools.com/rotary-hydro-x-available"><h4 class="media-heading"><i class="fa fa-paper-plane-o"></i> Rotary Hydro-X Available</h4></a>
           The new HXR-300 Rotary Hydro-X tool has an angled rotating jet pattern for effective digging and working around utilities.
           <p class="grey"><small>E-blast &ndash; February 13, 2017</small></p>
