--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -152,13 +152,13 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Pressure Range</th>
-                      <td>10k–22k psi</td>
-                      <td><span class="metric">700–1500 bar</span>
+                      <td>8k–22k psi</td>
+                      <td><span class="metric">550–1500 bar</span>
                     </tr>
                     <tr>
                       <th>Flow Range</th>
-                      <td>4.6–7.8 gpm</td>
-                      <td><span class="metric">17–30 l/min</span></td>
+                      <td>5-6 gpm</td>
+                      <td><span class="metric">19-23 l/min</span></td>
                     </tr>
                     <tr>
                       <th>Flow Coefficient</th>
@@ -206,7 +206,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Tool Model</th>
-                      <td colspan="2">BN13</td>
+                      <td colspan="2">BN13, BNS13</td>
                     </tr>
                     <tr>
                       <th>Tube ID Range</th>
@@ -215,13 +215,13 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Pressure Range</th>
-                      <td>10k–22k psi</td>
-                      <td><span class="metric">700–1500 bar</span>
+                      <td>8k–22k psi</td>
+                      <td><span class="metric">550–1500 bar</span>
                     </tr>
                     <tr>
                       <th>Flow Range</th>
-                      <td>7–10 gpm</td>
-                      <td><span class="metric">27–38 l/min</span></td>
+                      <td>7–9 gpm</td>
+                      <td><span class="metric">26–34 l/min</span></td>
                     </tr>
                     <tr>
                       <th>Flow Coefficient</th>
@@ -259,7 +259,7 @@ master-slider: yes
                   </tbody>
                   </table>
                 </div>
-                <!-- BN 15 -->
+                <!-- BN15 -->
                 <div role="tabpanel" class="tab-pane" id="bn15">
                   <table class="table specs table-hover">
                   <tbody>
@@ -278,13 +278,13 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Pressure Range</th>
-                      <td>10k–22k psi</td>
-                      <td><span class="metric">700–1500 bar</span>
+                      <td>8k–22k psi</td>
+                      <td><span class="metric">550–1500 bar</span>
                     </tr>
                     <tr>
                       <th>Flow Range</th>
-                      <td>7–10 gpm</td>
-                      <td><span class="metric">27–38 l/min</span></td>
+                      <td>8–10 gpm</td>
+                      <td><span class="metric">30–38 l/min</span></td>
                     </tr>
                     <tr>
                       <th>Flow Coefficient</th>
@@ -341,8 +341,8 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Pressure Range</th>
-                      <td>10k–22k psi</td>
-                      <td><span class="metric">700–1500 bar</span>
+                      <td>8k–22k psi</td>
+                      <td><span class="metric">550–1500 bar</span>
                     </tr>
                     <tr>
                       <th>Flow Range</th>
@@ -404,13 +404,13 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Pressure Range</th>
-                      <td>10k–22k psi</td>
-                      <td><span class="metric">700–1500 bar</span>
+                      <td>8k–22k psi</td>
+                      <td><span class="metric">550–1500 bar</span>
                     </tr>
                     <tr>
                       <th>Flow Range</th>
                       <td>11–24 gpm</td>
-                      <td><span class="metric">45–95 l/min</span></td>
+                      <td><span class="metric">42–91 l/min</span></td>
                     </tr>
                     <tr>
                       <th>Flow Coefficient</th>
@@ -467,13 +467,13 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Pressure Range</th>
-                      <td>10k–22k psi</td>
-                      <td><span class="metric">700–1500 bar</span>
+                      <td>8k–22k psi</td>
+                      <td><span class="metric">550–1500 bar</span>
                     </tr>
                     <tr>
                       <th>Flow Range</th>
                       <td>11–48 gpm</td>
-                      <td><span class="metric">45–190 l/min</span></td>
+                      <td><span class="metric">42–182 l/min</span></td>
                     </tr>
                     <tr>
                       <th>Flow Coefficient</th>
@@ -990,7 +990,7 @@ master-slider: yes
                 <li><a href="/assets/pdf/manuals/bn-40k_manual_insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;40k/2800 bar Banshee Models User Manual</a></li>
                 <li><a href="/assets/pdf/manuals/bns13_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Shrouded Banshee (BNS13) User Manual</a></li>
                 <li><a href="/assets/pdf/manuals/BT_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee Beetle Models User Manual</a></li>
-                <li><a href="/assets/pdf/bn_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee BN Models Tool Talk</a></li>
+                <li><a href="/assets/pdf/tool-talks/BN_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee BN Models Tool Talk</a></li>
                 <li><a href="/assets/pdf/bt_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee Beetle Models Tool Talk</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
