--- a/waterblast-automation/autobox-abx-3l.html
+++ b/waterblast-automation/autobox-abx-3l.html
@@ -174,7 +174,7 @@ master-slider: yes
       </div><!-- end accordion -->
       
 <!--      <h2 class="text-center">Available For Purchase in 2017</h2>-->
-      <a href="/rentals" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
+      <a href="/contact" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
 
   </div>
   <!-- End Product Info -->
@@ -224,6 +224,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
+          <td><a href="/assets/pdf/data-sheets/abx-3l_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
           <td><a href="/assets/pdf/tool-talks/ABX-3L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Tool Talk</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
@@ -245,13 +246,11 @@ master-slider: yes
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-<!--
         <div class="insight">
           <img src="/assets/img/quote.png" alt="quote" class="quote" />
-          <p>The ABX-2L is the most versatile and reliable flex lancing system we've ever used.</p>
-          <p class="signed">-Doug Mcgee,<br/>Evergreen Environmental Services</p>
+          <p>The ABX-3L proved to be a brutally tough and capable tool. During the entire project, which lasted two weeks, we never suffered a mechanical breakdown.”</p>
+          <p class="signed">-David Lamoureux,<br/>Project Manager</p>
         </div>
--->
         <img src="/assets/img/sliders/abx_3l_tube_face.jpg" alt="ABX-3L lancing exchanger">
       </div>
 
