--- a/waterblast-automation/yellow-jacket-boiler-cleaner.html
+++ b/waterblast-automation/yellow-jacket-boiler-cleaner.html
@@ -27,29 +27,29 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-default" id="masterslider">
           <div class="ms-slide">
-            <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/yellow-jacket-01.jpg" alt="Yellow Jacket online boiler cleaning">
-            <img class="ms-thumb" src="../assets/img/product/thumb-yellow-jacket-01.jpg" alt="thumb">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/yellow-jacket-01.jpg" alt="Yellow Jacket online boiler cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-yellow-jacket-01.jpg" alt="thumb">
 <!--                <a data-type="video" href="https://www.youtube.com/embed/DOFXkNg3ZVQ"> </a>-->
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/yellow-jacket-02.jpg" alt="lYellow Jacket online boiler cleaning">
-            <img class="ms-thumb" src="../assets/img/product/thumb-yellow-jacket-02.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/yellow-jacket-02.jpg" alt="lYellow Jacket online boiler cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-yellow-jacket-02.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/yellow-jacket-03.jpg" alt="Yellow Jacket online boiler cleaning">
-            <img class="ms-thumb" src="../assets/img/product/thumb-yellow-jacket-03.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/yellow-jacket-03.jpg" alt="Yellow Jacket online boiler cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-yellow-jacket-03.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/yellow-jacket-04.jpg" alt="Yellow Jacket online boiler cleaning">
-            <img class="ms-thumb" src="../assets/img/product/thumb-yellow-jacket-04.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/yellow-jacket-04.jpg" alt="Yellow Jacket online boiler cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-yellow-jacket-04.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/yellow-jacket-05.jpg" alt="Yellow Jacket online boiler cleaning">
-            <img class="ms-thumb" src="../assets/img/product/thumb-yellow-jacket-05.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/yellow-jacket-05.jpg" alt="Yellow Jacket online boiler cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-yellow-jacket-05.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/yellow-jacket-06.jpg" alt="Yellow Jacket online boiler cleaning">
-            <img class="ms-thumb" src="../assets/img/product/thumb-yellow-jacket-06.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/yellow-jacket-06.jpg" alt="Yellow Jacket online boiler cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-yellow-jacket-06.jpg" alt="thumb">
           </div>
         </div>
       </div>
@@ -177,7 +177,8 @@ for portability and quick assembly/disassembly</li>
           <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
             <div class="panel-body">
               <ul>
-                <li><a href="../assets/pdf/yellowjacket_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Yellow Jacket Data Sheet</a></li>
+                <li><a href="/assets/pdf/yellowjacket_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Yellow Jacket Data Sheet</a></li>
+                <li><a href="/assets/pdf/manuals/JKT-100_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Yellow Jacket Manual</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
@@ -186,7 +187,7 @@ for portability and quick assembly/disassembly</li>
         </div><!-- end tab -->
       </div><!-- end accordion -->
 
-      <a href="../contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
 
   </div>
   <!-- End Product Info -->
@@ -202,11 +203,11 @@ for portability and quick assembly/disassembly</li>
   </div>
   <div class="row row-centered">
     <div class="col-sm-2 col-centered">
-      <a href="/boiler-tube-cleaner"><img class="img-responsive" src="../assets/img/product/thumb-btc-01.jpg" alt="Boiler Tube Cleaner">
+      <a href="/boiler-tube-cleaner"><img class="img-responsive" src="/assets/img/product/thumb-btc-01.jpg" alt="Boiler Tube Cleaner">
       <h5>Boiler Tube Cleaner</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/bfw-100"><img class="img-responsive" src="../assets/img/product/bfw-02.jpg" alt="BFW-100 High Flow boiler cleaners">
+      <a href="/bfw-100"><img class="img-responsive" src="/assets/img/product/bfw-02.jpg" alt="BFW-100 High Flow boiler cleaners">
       <h5>BFW-100 High Flow</h5></a>
     </div>
   </div>
@@ -224,7 +225,7 @@ for portability and quick assembly/disassembly</li>
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="../assets/pdf/yellowjacket_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+          <td><a href="/assets/pdf/yellowjacket_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
