--- a/rotary-waterblast-tools/nozzles-extensions.html
+++ b/rotary-waterblast-tools/nozzles-extensions.html
@@ -237,10 +237,8 @@ master-slider: yes
           <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
             <div class="panel-body">
               <ul>
-                <li><a href="/assets/pdf/nozzle-chart-ap.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Attack Tip Nozzle Flow Chart</a></li>
-                <li><a href="/assets/pdf/nozzle-chart-os.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Sapphire Nozzle Flow Chart</a></li>
-                <li><a href="/assets/pdf/nozzle-chart-oc8.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;OC8 Nozzle Flow Chart</a></li>
-                <li><a href="/assets/pdf/nipples_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Extension Nipple Charts</a></li>
+                <li><a href="/assets/pdf/tool-talks/nozzles_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Nozzles Tool Talks (Flow Charts)</a></li>
+                <li><a href="/assets/pdf/tool-talks/extensions_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Extensions Tool Talk</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
