--- a/sewer-tools-nozzles/hydro-x-rotary.html
+++ b/sewer-tools-nozzles/hydro-x-rotary.html
@@ -73,7 +73,7 @@ master-slider: yes
           <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
             <div class="panel-body">
               <ul>
-                <li>Three jetting options available for different applicaitons:<br>
+                <li>Three nozzle sizes available for different applicaitons:<br>
                   &bull; <strong>HXR 300-10:</strong> Higher flow for harder surfaces<br>
                   &bull; <strong>HXR 300-8:</strong> Intermediate flow for general use<br>
                   &bull; <strong>HXR 300-5:</strong> Lower flow for water savings<br>
@@ -81,7 +81,7 @@ master-slider: yes
                 </li>
                 <li><strong>Fully rebuildable</strong> - inexpensive rebuild kits reduce cost of ownership by extending the life of the tool with minimal maintenance</li>
                 <li>Highest quality, cohesive jet for maximum material removal</li>
-                <li>Carbide seat for long nozzle life</li>
+                <li>Tungsten carbide nozzle and seat for long life</li>
                 <li>Replaceable shield cap</li>
               </ul>
             </div>
@@ -114,12 +114,12 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Flow Range</th>
-                  <td>3.5–13 gpm</td>
+                  <td>3.5–10 gpm</td>
                   <td><span class="metric">13–38 l/min</span></td>
                 </tr>
                 <tr>
                   <th>Cone Angle</th>
-                  <td colspan="2">18&deg;</td>
+                  <td colspan="2">15&deg;</td>
                 </tr>
                 <tr>
                   <th>Inlet Connection</th>
@@ -132,8 +132,8 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Length</th>
-                  <td>4.2 in.</td>
-                  <td><span class="metric">107 mm</span></td>
+                  <td>3.9 in.</td>
+                  <td><span class="metric">98 mm</span></td>
                 </tr>
                 <tr>
                   <th>Weight</th>
