--- a/waterblast-automation/torus-tr-130.html
+++ b/waterblast-automation/torus-tr-130.html
@@ -27,17 +27,17 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-default" id="masterslider">
           <div class="ms-slide">
-            <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/tr-130-01.jpg" alt="lorem ipsum dolor sit">
-            <img class="ms-thumb" src="../assets/img/product/thumb-tr-130-01.jpg" alt="thumb">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/tr-130-01.jpg" alt="lorem ipsum dolor sit">
+            <img class="ms-thumb" src="/assets/img/product/thumb-tr-130-01.jpg" alt="thumb">
               <a data-type="video" href="https://www.youtube.com/embed/OUiqrv8elCA"> </a>
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/tr-130-02.jpg" alt="lorem ipsum dolor sit">
-            <img class="ms-thumb" src="../assets/img/product/thumb-tr-130-02.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/tr-130-02.jpg" alt="lorem ipsum dolor sit">
+            <img class="ms-thumb" src="/assets/img/product/thumb-tr-130-02.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/tr-130-200.jpg" alt="lorem ipsum dolor sit">
-            <img class="ms-thumb" src="../assets/img/product/thumb-tr-130-200.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/tr-130-200.jpg" alt="lorem ipsum dolor sit">
+            <img class="ms-thumb" src="/assets/img/product/thumb-tr-130-200.jpg" alt="thumb">
           </div>
         </div>
       </div>
@@ -165,10 +165,10 @@ master-slider: yes
           <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
             <div class="panel-body">
               <ul>
-                <li><a href="../assets/pdf/torus_rack_card.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus Data Sheet</a></li>
-                <li><a href="../assets/pdf/manuals/TR-130_Manual_Insert.pdf"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-130 Manual</a></li>
-                <li><a href="../assets/pdf/manuals/TR-130_Fastener_Assembly_Instructions.pdf"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-130 Fastener Assembly Instructions</a></li>
-                <li><a href="../assets/pdf/sales-manual/TR130_config.pdf"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-130 Tool Talk</a></li>
+                <li><a href="/assets/pdf/torus_rack_card.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus Data Sheet</a></li>
+                <li><a href="/assets/pdf/manuals/TR-130_Manual_Insert.pdf"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-130 Manual</a></li>
+                <li><a href="/assets/pdf/manuals/TR-130_Fastener_Assembly_Instructions.pdf"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-130 Fastener Assembly Instructions</a></li>
+                <li><a href="/assets/pdf/tool-talks/TR-130_tool_talk.pdf"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-130 Tool Talk</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
@@ -177,7 +177,7 @@ master-slider: yes
         </div><!-- end tab -->
       </div><!-- end accordion -->
 
-      <a href="../contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
 
   </div>
   <!-- End Product Info -->
@@ -193,15 +193,15 @@ master-slider: yes
   </div>
   <div class="row row-centered">
     <div class="col-sm-2 col-centered">
-      <a href="tr-200"><img class="img-responsive" src="../assets/img/product/thumb-tr-200-01.jpg" alt="Torus TR-200">
+      <a href="tr-200"><img class="img-responsive" src="/assets/img/product/thumb-tr-200-01.jpg" alt="Torus TR-200">
       <h5>Torus TR-200</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="torus-booms"><img class="img-responsive" src="../assets/img/product/thumb-boom-01.jpg" alt="Torus Positioning Booms">
+      <a href="torus-booms"><img class="img-responsive" src="/assets/img/product/thumb-boom-01.jpg" alt="Torus Positioning Booms">
       <h5>Torus Positioning Booms</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/abx-500"><img class="img-responsive" src="../assets/img/product/thumb-abx-500-01.jpg" alt="AutoBox ABX-500 Hose Drive">
+      <a href="/abx-500"><img class="img-responsive" src="/assets/img/product/thumb-abx-500-01.jpg" alt="AutoBox ABX-500 Hose Drive">
       <h5>AutoBox ABX-500</h5></a>
     </div>
   </div>
@@ -219,7 +219,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="../assets/pdf/torus_rack_card.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+          <td><a href="/assets/pdf/torus_rack_card.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
@@ -241,21 +241,21 @@ master-slider: yes
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>We rent the TR-130 to customers all the time. It requires very little maintenance and will get the job done every time.</p>
           <p class="signed">-Dean Tramontana,<br/>StoneAge Louisiana</p>
         </div>
-        <img src="../assets/img/sliders/tr130_hanging.jpg" alt="Torus tank cleaning tools">
+        <img src="/assets/img/sliders/tr130_hanging.jpg" alt="Torus tank cleaning tools">
       </div>
 
       <div class="item">
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>Cleaning our reactors with the StoneAge Torus 3D tool eliminated the possibility of causing damage to interior componentry.
 </p>
           <p class="signed">- Brent Peveto,<br/>Nippon Chemical Texas, Inc. (NCTI)</p>
         </div>
-        <img src="../assets/img/sliders/tr_130_hanging_with_water.jpg" alt="Torus tank and vessel cleaning">
+        <img src="/assets/img/sliders/tr_130_hanging_with_water.jpg" alt="Torus tank and vessel cleaning">
       </div>
 
     </div><!-- End wrapper -->
