--- a/waterblast-automation/torus-tr-200.html
+++ b/waterblast-automation/torus-tr-200.html
@@ -27,13 +27,13 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-default" id="masterslider">
           <div class="ms-slide">
-            <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/tr-200-01.jpg" alt="lorem ipsum dolor sit">
-            <img class="ms-thumb" src="../assets/img/product/thumb-tr-200-01.jpg" alt="thumb">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/tr-200-01.jpg" alt="lorem ipsum dolor sit">
+            <img class="ms-thumb" src="/assets/img/product/thumb-tr-200-01.jpg" alt="thumb">
               <a data-type="video" href="https://www.youtube.com/embed/OUiqrv8elCA"> </a>
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/tr-130-200.jpg" alt="lorem ipsum dolor sit">
-            <img class="ms-thumb" src="../assets/img/product/thumb-tr-130-200.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/tr-130-200.jpg" alt="lorem ipsum dolor sit">
+            <img class="ms-thumb" src="/assets/img/product/thumb-tr-130-200.jpg" alt="thumb">
           </div>
         </div>
       </div>
@@ -160,10 +160,10 @@ The Torus TR-200 is the industry’s most powerful 3-D tool. It is capable of de
           <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
             <div class="panel-body">
               <ul>
-                <li><a href="../assets/pdf/torus_rack_card.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus Data Sheet</a></li>
-                <li><a href="../assets/pdf/manuals/TR-200_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-200 Manual</a></li>
-                <li><a href="../assets/pdf/manuals/TR-200_Fastener_Assembly_Instructions.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-200 Fastener Assembly Instructions</a></li>
-                <li><a href="../assets/pdf/sales-manual/TR200_config.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-200 Tool Talk</a></li>
+                <li><a href="/assets/pdf/torus_rack_card.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus Data Sheet</a></li>
+                <li><a href="/assets/pdf/manuals/TR-200_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-200 Manual</a></li>
+                <li><a href="/assets/pdf/manuals/TR-200_Fastener_Assembly_Instructions.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-200 Fastener Assembly Instructions</a></li>
+                <li><a href="/assets/pdf/tool-talks/TR-200_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-200 Tool Talk</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
@@ -172,7 +172,7 @@ The Torus TR-200 is the industry’s most powerful 3-D tool. It is capable of de
         </div><!-- end tab -->
       </div><!-- end accordion -->
 
-      <a href="../contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
     </div>
   </div>
   <!-- End Product Info -->
@@ -187,11 +187,11 @@ The Torus TR-200 is the industry’s most powerful 3-D tool. It is capable of de
   </div>
   <div class="row row-centered">
     <div class="col-sm-2 col-centered">
-      <a href="/tr-130"><img class="img-responsive" src="../assets/img/product/thumb-tr-130-01.jpg" alt="Torus TR-130">
+      <a href="/tr-130"><img class="img-responsive" src="/assets/img/product/thumb-tr-130-01.jpg" alt="Torus TR-130">
       <h5>Torus TR-130</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/torus-booms"><img class="img-responsive" src="../assets/img/product/thumb-boom-01.jpg" alt="Torus Positioning Booms">
+      <a href="/torus-booms"><img class="img-responsive" src="/assets/img/product/thumb-boom-01.jpg" alt="Torus Positioning Booms">
       <h5>Torus Positioning Booms</h5></a>
     </div>
   </div>
@@ -209,7 +209,7 @@ The Torus TR-200 is the industry’s most powerful 3-D tool. It is capable of de
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="../assets/pdf/torus_rack_card.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+          <td><a href="/assets/pdf/torus_rack_card.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
@@ -231,24 +231,24 @@ The Torus TR-200 is the industry’s most powerful 3-D tool. It is capable of de
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>Cleaning our reactors with the StoneAge Torus 3D tool eliminated the possibility of causing damage to interior componentry.
 </p>
           <p class="signed">- Brent Peveto,<br/>Nippon Chemical Texas, Inc. (NCTI)</p>
         </div>
-        <img src="../assets/img/sliders/tr200_in_tank.jpg" alt="Torus tank cleaning tools">
+        <img src="/assets/img/sliders/tr200_in_tank.jpg" alt="Torus tank cleaning tools">
       </div>
 
       <div class="item">
 <!--
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>Cleaning our reactors with the StoneAge Torus 3D tool eliminated the possibility of causing damage to interior componentry.
 </p>
           <p class="signed">- Brent Peveto,<br/>Nippon Chemical Texas, Inc. (NCTI)</p>
         </div>
 -->
-        <img src="../assets/img/sliders/tr_130_hanging_with_water.jpg" alt="Torus tank and vessel cleaning">
+        <img src="/assets/img/sliders/tr_130_hanging_with_water.jpg" alt="Torus tank and vessel cleaning">
       </div>
 
     </div><!-- End wrapper -->
