WHR Switcher launch, etc.

--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -175,6 +175,9 @@
   <iframe width="560" height="315" src="https://www.youtube.com/embed/K77gEtQl_Xc?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="switcher-vid">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/x8Rl3rQrhWI?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
+<div id="wgr-switcher-vid">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/iybnXP6faVU?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="wh-maint-vid">
