--- a/sewer-tools-nozzles/warthog-wgr-switcher.html
+++ b/sewer-tools-nozzles/warthog-wgr-switcher.html
@@ -161,9 +161,20 @@ master-slider: yes
                 <div class="col-sm-6">
                   <!-- lightbox call -->
                   <div style="margin-right:30px; margin-bottom:10px;">
-                    <a href="#" data-featherlight="/assets/vid/vids.html #switcher-vid">
-                      <img src="assets/vid/thumb/switcher-vid.png" alt="Warthog Switcher video" class="img-responsive" />
+                    <a href="#" data-featherlight="/assets/vid/vids.html #wgr-switcher-vid">
+                      <img src="assets/vid/thumb/wgr-switcher-vid.png" alt="Warthog WGR Switcher video" class="img-responsive" />
                     </a>
+                    <p>WGR Switcher Overview</p>
+                  </div>
+                  <!-- end lightbox call -->
+                </div>
+                <div class="col-sm-6">
+                  <!-- lightbox call -->
+                  <div style="margin-right:30px; margin-bottom:10px;">
+                    <a href="#" data-featherlight="/assets/vid/vids.html #switcher-vid">
+                      <img src="assets/vid/thumb/switcher-vid.jpg" alt="Warthog Switcher video" class="img-responsive" />
+                    </a>
+                    <p>Switcher Overview</p>
                   </div>
                   <!-- end lightbox call -->
                 </div>
@@ -184,7 +195,7 @@ master-slider: yes
               <ul>
                 <li><a href="/assets/pdf/switcher_wgr_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WGR Switcher Data Sheet</a></li>
                 <li><a href="/assets/pdf/manuals/WGR-SWT_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WGR Switcher Manual</a></li>
-                <li><a href="/assets/pdf/switcher_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Switcher Tool Talk</a></li>
+                <li><a href="http://jetting.stoneagetools.com/tool/sewer-jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
