--- a/sewer-tools-nozzles/warthog-whr-switcher.html
+++ b/sewer-tools-nozzles/warthog-whr-switcher.html
@@ -29,7 +29,7 @@ master-slider: yes
           <div class="ms-slide">
             <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/whr-switcher-01.jpg" alt="Warthog WHR Switcher sewer jetting">
             <img class="ms-thumb" src="/assets/img/product/thumb-whr-switcher-01.jpg" alt="thumb">
-              <a data-type="video" href="https://www.youtube.com/embed/iybnXP6faVU"> </a>
+              <a data-type="video" href="https://www.youtube.com/embed/x8Rl3rQrhWI?rel=0"> </a>
           </div>
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/whr-switcher-02.jpg" alt="Warthog WHR Switcher sewer jetting">
@@ -64,11 +64,9 @@ master-slider: yes
         </div>
         <div class="clearfix"></div>
       </div>
-      
-      <p class="product-description promo-heading"><em>Available for purchase in 2017</em></p>
 
       <p class="product-description"><strong>The WHR Switcher is two tools in one.</strong> Switch between pulling or cleaning without removing the nozzle from the pipe. When the pump is idled down and brought back to pressure, the tool will switch the water flow between two different sets of jets.</p>
-      <p>The WHR Switcher features the same technology as the <a href="/wgr-switcher">WGR Switcher</a> for 1/2" &amp; 3/4" inlets.</p>
+      <p>The WHR Switcher features the same technology as the <a href="/wgr-switcher">WGR Switcher</a> for 3/4" inlets.</p>
 
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
@@ -132,7 +130,7 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Inlet Connection</th>
-                  <td colspan="2">1/2 NPT or BSPP,<br>3/4 NPT or BSPP</td>
+                  <td colspan="2">3/4 NPT or BSPP</td>
                 </tr>
                 <tr>
                   <th>Nozzle Ports</th>
@@ -173,9 +171,9 @@ master-slider: yes
                   <!-- lightbox call -->
                   <div style="margin-right:30px; margin-bottom:10px;">
                     <a href="#" data-featherlight="/assets/vid/vids.html #switcher-vid">
-                      <img src="assets/vid/thumb/switcher-vid.png" alt="Warthog Switcher video" class="img-responsive" />
+                      <img src="assets/vid/thumb/switcher-vid.jpg" alt="Warthog Switcher video" class="img-responsive" />
                     </a>
-                    <p>WGR Switcher Overview<br><em>The WHR Switcher offers the same technology for 1/2" &amp; 3/4" inlets</em></p>
+                    <p>Switcher Overview</p>
                   </div>
                   <!-- end lightbox call -->
                 </div>
@@ -196,7 +194,7 @@ master-slider: yes
               <ul>
                 <li><a href="/assets/pdf/data-sheets/WHR-SWT_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WHR Switcher Data Sheet</a></li>
                 <li><a href="/assets/pdf/manuals/WHR-SWT_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WHR Switcher Manual</a></li>
-                <li><a href="/assets/pdf/switcher_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Switcher Tool Talk</a></li>
+                <li><a href="http://jetting.stoneagetools.com/tool/sewer-jetting-app.html" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
