update home feature

--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@ permalink: /
       </div>
       <!-- Row 1 -->
       <div class="row margin-bottom-20">
-        <a href="http://info.stoneagetools.com/wwett-2017"><img src="/assets/img/features/wwett17_show_special.png" alt="2017 WWETT Show Special" class="img-responsive"/></a>
-      </div>
+        <a href="/abx-3l"><img src="/assets/img/features/abx-3l_available_02.png" alt="AutoBox ABX-3L heat exchanger cleaning" class="img-responsive"/></a>
+      </div>  
       <!-- Row 2 -->
       <div class="row margin-bottom-20">
-        <a href="/abx-3l"><img src="/assets/img/features/abx-3l_available_02.png" alt="AutoBox ABX-3L heat exchanger cleaning" class="img-responsive"/></a>
+        <a href="/whr-switcher"><img src="/assets/img/features/switchers.png" alt="Switcher for sewer cleaning" class="img-responsive"/></a>
       </div>      
     </div>
     <!-- End Features/Promos -->
