--- a/loc-houston.html
+++ b/loc-houston.html
@@ -56,10 +56,10 @@ contact-houston: yes
             <a href="mailto:stephen.shivar@stoneagetools.com">stephen.shivar@stoneagetools.com</a></p>
           </div>
           <div class="col-sm-6">
-            <p><strong>Valoree Miller</strong><br/>
-              Office Manager<br/>
+            <p><strong>Faran Fatehi</strong><br/>
+              Office Manager/Inside Sales<br/>
               Main: +1 (281) 888-5069<br/>
-              <a href="mailto:valoree.miller@stoneagetools.com">valoree.miller@stoneagetools.com</a></p>
+              <a href="mailto:faran.fatehi@stoneagetools.com">faran.fatehi@stoneagetools.com</a></p>
           </div>
         </div>
         <div class="row">
@@ -73,8 +73,18 @@ contact-houston: yes
           <div class="col-sm-6">
             <p><strong>Doug McGee</strong>
             <br/>Automation Technician<br/>
+              Main: +1 (281) 888-5069<br/>
               Mobile: +1 (281) 507-9080<br/>
               <a href="mailto:doug.mcgee@stoneagetools.com">doug.mcgee@stoneagetools.com</a></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6">
+            <p><strong>Mike Rimmell</strong><br/>
+              Rental, Repair and Automation (RRA) Technician<br/>
+              Main: +1 (281) 888-5069<br/>
+              Mobile: +1 (832) 720-8596
+            <a href="mailto:mike.rimmell@stoneagetools.com">mike.rimmell@stoneagetools.com</a></p>
           </div>
         </div>
 
