misc fixes and updates after mixit branch launch

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ permalink: /
       </div>  
       <!-- Row 2 -->
       <div class="row margin-bottom-20">
-        <a href="/whr-switcher"><img src="/assets/img/features/switchers.png" alt="Switcher for sewer cleaning" class="img-responsive"/></a>
+        <a href="http://news.stoneagetools.com/warthog-switcher-cuts-time-in-half"><img src="/assets/img/features/switchers.png" alt="Switcher for sewer cleaning" class="img-responsive"/></a>
       </div>      
     </div>
     <!-- End Features/Promos -->
@@ -114,12 +114,11 @@ permalink: /
       <h2>Events</h2>
     </div>
     <div class="row">
-      <a href="http://info.stoneagetools.com/wwett-2017" target="_blank"><img src="/assets/img/thumb/upcoming-events-wwett2017.jpg" class="img-responsive"/ alt="Visit StoneAge at WWETT 2017"></a>
-      <div class="caption">
-        <h4><a href="http://info.stoneagetools.com/wwett-2017">2017 WWETT Show<br><span class="small">February 22-25<br/>
-        Indianapolis, IN</span></a></h4>
-        <p><strong>Visit Us in Booth #5144</strong></p>
-        <p>The WWETT Show - Water &amp; Wastewater Equipment, Treatment &amp; Transport - is the world's largest annual trade show in the environmental service industry. Each year, over 12,000 people gather from all parts of the world to see the latest in equipment and technology, attend education sessions led by the best in the business, and gather for fun with friends and colleagues.</p>
+      <a href="http://rokatech.de/" target="_blank"><img src="/assets/img/thumb/upcoming-event-ro-ka-tech.gif" class="img-responsive"/ alt="Visit StoneAge at Ro-Ka-Tech 2017"></a>
+      <div class="caption" style="padding-top:15px;">
+        <h4><a href="http://rokatech.de/" target="_blank">Ro-Ka-Tech 2017<br>International Trade Fair for Pipe and Sewer Technology<br><span class="small">May 10-12<br/>
+        Kassel, Germany</span></a></h4>
+        <p><strong>Visit Us in H5/A13-1</strong></p>
       </div>
     </div>
   </div>
@@ -131,6 +130,11 @@ permalink: /
       <h2>Latest News</h2>
     </div>
     <ul class="home-news list-unstyled">
+      <li>
+        <h4><a href="http://news.stoneagetools.com/warthog-switcher-cuts-time-in-half">Warthog Switcher Avalable for 3/4" Inlets</a></h4>
+        <p>The Switcher introduces the ability to run a single sewer jetting tool in either pulling or cleaning mode, without removing the nozzle from the pipe &ndash; <em>Now Available for 3/4 Inlets</em><br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, February 2017</small></p>
+      </li>
       <li>
         <h4><a href="http://news.stoneagetools.com/abx-3l-available" target="_blank">Announcing AutoBox ABX-3L</a></h4>
         <p>StoneAge is excited to announce the release of the AutoBox ABX-3L automated lancing system for your toughest exchanger cleaning jobs.<br>
@@ -145,11 +149,6 @@ permalink: /
         <h4><a href="http://news.stoneagetools.com/best-place-to-work-2016">SCS High Flow Tank Cleaner Now Available</a></h4>
         <p>The StoneAge SCS High Flow Tank Cleaner delivers high flow and controlled rotation for cleaning difficult tanks, lines, and vessels.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, February 2017</small></p>
-      </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/welcome-european-team" target="_blank">StoneAge Welcomes European Team</a></h4>
-        <p>StoneAge is pleased to welcome our newest StoneAge Europe team members: Steve Ellis, Jan van der Wal, and Andrew Birt.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, January 2017</small></p>
       </li>
       <li>
         <h4><a href="http://news.stoneagetools.com/europe-2017">StoneAge Announces Direct Sales and New Distribution Territories in Europe</a></h4>
