--- a/manuals.html
+++ b/manuals.html
@@ -459,7 +459,7 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td><a href="/rotary-swivels">SG</a></td>
+                <td><a href="/sg-swivel">SG</a></td>
                 <td>SWIVELS<br>Rotary coupling models: SG-P8P8, SG-P12P12-62, SG-P12K-62, <br>SG-MP12AV12,SG-MP12K-62, SG-MP16MP16-62, SG-MP16K-62</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/SG_Manual.pdf" target="_blank" class="btn btn-sm">PL 518</a></td>
                 <td class="text-center"></td>
@@ -483,7 +483,7 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td><a href="/rotary-swivels">SG-CCN</a></td>
+                <td><a href="/sg-swivel">SG-CCN</a></td>
                 <td>SWIVELS<br>Rotary coupling models: SG-CCN-P12K, SG-CCN-MP12K, SG-CRS-MP12K</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/SG-CCN_Manual.pdf" target="_blank" class="btn btn-sm">PL 535</a></td>
                 <td class="text-center"></td>
@@ -499,7 +499,7 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td><a href="/rotary-swivels">SH</a></td>
+                <td><a href="/sh-swivel">SH</a></td>
                 <td>SWIVELS<br>Rotary coupling model: SH-P8P8</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/SG_Manual.pdf" target="_blank" class="btn btn-sm">PL 521</a></td>
                 <td class="text-center"></td>
@@ -507,7 +507,7 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td><a href="/rotary-swivels">SL</a></td>
+                <td><a href="/sl-swivel">SL</a></td>
                 <td>SWIVELS<br>Rotary coupling models: SL-P8P4, SL-MP9AV9, SL-MP9MP9R-L</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/SL_Manual.pdf" target="_blank" class="btn btn-sm">PL 525</a></td>
                 <td class="text-center"></td>
@@ -515,7 +515,7 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td><a href="/rotary-swivels">SM</a></td>
+                <td><a href="/sm-swivel">SM</a></td>
                 <td>SWIVELS<br>Rotary coupling models: SM-P16, SM-P20, SM-P16G, SM-P16L</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/SM_Manual.pdf" target="_blank" class="btn btn-sm">PL 524</a></td>
                 <td class="text-center"></td>
@@ -571,7 +571,7 @@ permalink: /manuals
                 <td class="text-center"><a href="/assets/pdf/manuals/TR-200_Fastener_Assembly_Instructions.pdf" target="_blank" class="btn btn-sm">Guide</a></td>
               </tr>
               <tr>
-                <td><a href="/rotary-swivels">UH</a></td>
+                <td><a href="/uh-swivel">UH</a></td>
                 <td>SWIVELS<br>Rotary coupling models: UH-H9H6, UH-H9G12</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/UH_Manual.pdf" target="_blank" class="btn btn-sm">PL 523</a></td>
                 <td class="text-center"></td>
@@ -587,7 +587,7 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td><a href="/rotary-swivels">UHS</a></td>
+                <td><a href="/uh-swivel">UHS</a></td>
                 <td>SWIVELS<br>Rotary coupling models: UHS-H9H9, UHS-H9H9-L</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/UHS_Manual.pdf" target="_blank" class="btn btn-sm">PL 541</a></td>
                 <td class="text-center"></td>
