--- a/sewer-tools-nozzles/manhole-cleaner.html
+++ b/sewer-tools-nozzles/manhole-cleaner.html
@@ -78,12 +78,12 @@ master-slider: yes
         <section id="section-bar-1">
           <div class="col-sm-5"> <!-- Nav tabs -->
             <ul class="nav nav-tabs" role="tablist">
-              <li role="presentation" class="active"><a href="#wg18" aria-controls="wg18" role="tab" data-toggle="tab">WGR-MH-PKG</a></li>
+              <li role="presentation" class="active"><a href="#wg18" aria-controls="wgr18" role="tab" data-toggle="tab">WGR-MH-PKG</a></li>
             </ul>
             <!-- Tab panes -->
             <div class="tab-content">
               <!-- WGR -->
-              <div role="tabpanel" class="tab-pane active" id="wg18">
+              <div role="tabpanel" class="tab-pane active" id="wgr18">
                 <table class="table specs table-hover">
                 <tbody>
                   <tr>
@@ -97,6 +97,14 @@ master-slider: yes
                   </tr>
                 </tbody>
                 </table>
+                <h3>Package Includes:</h3>
+                <ul>
+                  <li>1 x <strong>WGR 040-R35-MH</strong> Head, 5k psi, Manhole</li>
+                  <li>1 x <strong>WGR-1</strong> Warthog, Recycled Water, P16</li>
+                  <li>4 x <strong>CNP2</strong> Nozzles, size specified for application</li>
+                  <li>2 x <strong>SA 356-P8P4-8</strong> Ext Nipple, 1/2 x 1/4 NPT x 8"</li>
+                  <li>2 x <strong>WGR 057</strong> Bushing, P4M P2F, SS</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -133,6 +141,15 @@ master-slider: yes
                   </tr>
                 </tbody>
                 </table>
+                <h3>Package Includes:</h3>
+                <ul>
+                  <li>1 x <strong>BJ 041-P8-6-R35</strong> Head, 15k psi, Manhole</li>
+                  <li>1 x <strong>WG-1</strong> Warthog</li>
+                  <li>4 x <strong>AP4</strong> Nozzles, size specified for application</li>
+                  <li>2 x <strong>SA 356-P8P4-8</strong> Ext Nipple, 1/2 x 1/4 NPT x 8"</li>
+                  <li>2 x <strong>SA 356-P8P4-6</strong> Ext Nipple, 1/2 x 1/4 NPT x 6"</li>
+                  <li>2 x <strong>GP 025-P8SS</strong> Hex Socket Plug, 1/2 NPT Male, SS</li>
+                </ul>
               </div>
               <!-- WG-24 -->
               <div role="tabpanel" class="tab-pane" id="wg24">
@@ -149,6 +166,15 @@ master-slider: yes
                   </tr>
                 </tbody>
                 </table>
+                <h3>Package Includes:</h3>
+                <ul>
+                  <li>1 x <strong>BJ 041-P8-6-R35</strong> Head, 15k psi, Manhole</li>
+                  <li>1 x <strong>WG-1</strong> Warthog</li>
+                  <li>4 x <strong>AP4</strong> Nozzles, size specified for application</li>
+                  <li>2 x <strong>SA 356-P8P4-10</strong> Ext Nipple, 1/2 x 1/4 NPT x 10"</li>
+                  <li>2 x <strong>SA 356-P8P4-8</strong> Ext Nipple, 1/2 x 1/4 NPT x 8"</li>
+                  <li>2 x <strong>GP 025-P8SS</strong> Hex Socket Plug, 1/2 NPT Male, SS</li>
+                </ul>
               </div>
               <!-- WG-36 -->
               <div role="tabpanel" class="tab-pane" id="wg36">
@@ -165,6 +191,15 @@ master-slider: yes
                   </tr>
                 </tbody>
                 </table>
+                <h3>Package Includes:</h3>
+                <ul>
+                  <li>1 x <strong>BJ 041-P8-6-R35</strong> Head, 15k psi, Manhole</li>
+                  <li>1 x <strong>WG-1</strong> Warthog</li>
+                  <li>4 x <strong>AP4</strong> Nozzles, size specified for application</li>
+                  <li>2 x <strong>SA 356-P8P4-18</strong> Ext Nipple, 1/2 x 1/4 NPT x 18"</li>
+                  <li>2 x <strong>SA 356-P8P4-14</strong> Ext Nipple, 1/2 x 1/4 NPT x 14"</li>
+                  <li>2 x <strong>GP 025-P8SS</strong> Hex Socket Plug, 1/2 NPT Male, SS</li>
+                </ul>
               </div>
             </div>
           </div>
